add get a user/variety/disease/deficiency by id feature
