# routes/riceDiseaseRoutes.js
@@ -5,6 +5,7 @@ const riceDiseaseController = require('../controllers/riceDiseaseController');
 const { isAdmin, isLogin, isLogout } = require('../middlewares/authMiddleware');
 
 router.get('/rice-diseases', isLogin, isLogout, riceDiseaseController.getAllRiceDiseases);
+router.get('/rice-diseases/:id', isLogin, isLogout, riceDiseaseController.getRiceDisease);
 router.post('/admin/rice-diseases', isLogin, isLogout, isAdmin, riceDiseaseController.createRiceDisease);
 
 module.exports = router;
