# swagger.yaml
@@ -2,9 +2,138 @@ openapi: 3.0.0
 info:
   title: Q-RICE API
   version: 1.0.0
+servers:
+  - url: https://q-rice-3ol5bv6txa-uc.a.run.app/
+    description: Production server
+  - url: http://localhost:8080
+    description: Local development server
+
+tags:
+  - name: Users
+    description: User management operations
+  - name: ML
+    description: Machine learning operations
+  - name: Diseases
+    description: Rice disease operations
+  - name: Varieties
+    description: Rice variety operations
+  - name: Deficiencies
+    description: Nutrient deficiency operations
+
 paths:
+  /api/register:
+    post:
+      tags:
+        - Users
+      summary: User Registration
+      description: Registers a new user.
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                username:
+                  type: string
+                email:
+                  type: string
+                password:
+                  type: string
+      responses:
+        '200':
+          description: Successful registration
+        '400':
+          description: Invalid request payload
+    
+  /api/login:
+    post:
+      tags:
+        - Users
+      summary: User Login
+      description: Authenticates the user.
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                username:
+                  type: string
+                password:
+                  type: string
+      responses:
+        '200':
+          description: Successful login
+        '401':
+          description: Unauthorized
+    
+  /api/admin/users:
+    get:
+      tags:
+        - Users
+      summary: Get Users (Admin)
+      description: Retrieves a list of users (admin only).
+      security:
+        - BearerAuth: []
+      responses:
+        '200':
+          description: Successful response
+        '401':
+          description: Unauthorized
+        '403':
+          description: Access denied
+  
+  /api/predict:
+    post:
+      tags:
+          - ML
+      summary: Image Prediction
+      description: Predicts using an image.
+      security:
+        - BearerAuth: []
+      requestBody:
+        required: true
+        content:
+          multipart/form-data:
+            schema:
+              type: object
+              properties:
+                image:
+                  type: string
+                  format: binary
+                model:
+                  type: string
+                  enum:
+                    - riceDisease
+                    - nutrientDeficiency
+                    - riceVariety
+
+      responses:
+        '200':
+          description: Successful prediction
+        '401':
+          description: Unauthorized
+        '400':
+          description: Invalid request payload
+    get:
+      tags:
+          - ML
+      summary: Get Prediction Histories
+      description: Retrieves the prediction histories.
+      security:
+        - BearerAuth: []
+      responses:
+        '200':
+          description: Successful response
+        '401':
+          description: Unauthorized
+
   /api/rice-varieties:
     get:
+      tags:
+        - Varieties
       summary: Get Rice Varieties
       description: Retrieves a list of rice varieties.
       security:
@@ -17,6 +146,8 @@ paths:
   
   /api/rice-diseases:
     get:
+      tags:
+        - Diseases
       summary: Get Rice Diseases
       description: Retrieves a list of rice diseases.
       security:
@@ -29,20 +160,10 @@ paths:
 
   /api/nutrient-deficiencies:
     get:
+      tags:
+        - Deficiencies
       summary: Get Nutrient Deficiencies
       description: Retrieves a list of nutrient deficiencies.
-      security:
-        - BearerAuth: []
-      responses:
-        '200':
-          description: Successful response
-        '401':
-          description: Unauthorized
-      
-  /api/admin/users:
-    get:
-      summary: Get Users (Admin)
-      description: Retrieves a list of users (admin only).
       security:
         - BearerAuth: []
       responses:
@@ -53,6 +174,8 @@ paths:
 
   /api/admin/rice-varieties:
     post:
+      tags:
+        - Varieties
       summary: Create Rice Variety (Admin)
       description: Creates a new rice variety (admin only).
       security:
@@ -78,6 +201,8 @@ paths:
 
   /api/admin/rice-diseases:
     post:
+      tags:
+        - Diseases
       summary: Create Rice Disease (Admin)
       description: Creates a new rice disease (admin only).
       security:
@@ -103,6 +228,8 @@ paths:
 
   /api/admin/nutrient-deficiencies:
     post:
+      tags:
+        - Deficiencies
       summary: Create Nutrient Deficiency (Admin)
       description: Creates a new nutrient deficiency (admin only).
       security:
@@ -126,30 +253,10 @@ paths:
         '400':
           description: Invalid request payload
 
-  /api/login:
-    post:
-      summary: User Login
-      description: Authenticates the user.
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                username:
-                  type: string
-                password:
-                  type: string
-      responses:
-        '200':
-          description: Successful login
-        '401':
-          description: Unauthorized
-
-
   /api/logout:
     post:
+      tags:
+        - Users
       summary: User Logout
       description: Logs out the user.
       security:
@@ -160,65 +267,84 @@ paths:
         '401':
           description: Unauthorized
 
-  /api/register:
-    post:
-      summary: User Registration
-      description: Registers a new user.
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                username:
-                  type: string
-                email:
-                  type: string
-                password:
-                  type: string
-                role:
-                  type: string
-      responses:
-        '200':
-          description: Successful registration
-        '400':
-          description: Invalid request payload
-
-  /api/predict:
-    post:
-      summary: Image Prediction
-      description: Predicts using an image.
+  /api/rice-diseases/{id}:
+    get:
+      tags:
+        - Diseases
+      summary: Get rice disease by ID
+      description: Retrieves a rice disease based on the provided ID.
       security:
         - BearerAuth: []
-      requestBody:
-        required: true
-        content:
-          multipart/form-data:
-            schema:
-              type: object
-              properties:
-                image:
-                  type: string
-                  format: binary
-                model:
-                  type: string
-                categoryId:
-                  type: integer
-                userId:
-                  type: integer
+      parameters:
+        - name: id
+          in: path
+          description: ID of the rice disease to retrieve.
+          required: true
+          schema:
+            type: string
       responses:
         '200':
-          description: Successful prediction
+          description: Successful response
         '401':
           description: Unauthorized
-        '400':
-          description: Invalid request payload
+
+  /api/rice-varieties/{id}:
     get:
-      summary: Get Prediction Histories
-      description: Retrieves the prediction histories.
+      tags:
+        - Varieties
+      summary: Get rice variety by ID
+      description: Retrieves a rice variety based on the provided ID.
       security:
         - BearerAuth: []
+      parameters:
+        - name: id
+          in: path
+          description: ID of the rice variety to retrieve.
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: Successful response
+        '401':
+          description: Unauthorized
+
+  /api/nutrient-deficiencies/{id}:
+    get:
+      tags:
+        - Deficiencies
+      summary: Get nutrient deficiency by ID
+      description: Retrieves a nutrient deficiency based on the provided ID.
+      security:
+        - BearerAuth: []
+      parameters:
+        - name: id
+          in: path
+          description: ID of the nutrient deficiency to retrieve.
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: Successful response
+        '401':
+          description: Unauthorized
+    
+  /api/users/{id}:
+    get:
+      tags:
+        - Users
+      summary: Get user by ID
+      description: Retrieves a user based on the provided ID.
+      security:
+        - BearerAuth: []
+      parameters:
+        - name: id
+          in: path
+          description: ID of the userto retrieve.
+          required: true
+          schema:
+            type: string
       responses:
         '200':
           description: Successful response
@@ -231,3 +357,4 @@ components:
       type: http
       scheme: bearer
       bearerFormat: JWT
+
